[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "customer_pipeline_plus"
version = "0.1.1"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "snowflake-connector-python",
    "cryptography",
    "requests",
]

[tool.setuptools.packages.find]
include = ["dagster_data"]